<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AlarmActivity" >

    <ImageView
        android:id="@+id/imageView_alarm_clock"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_above="@+id/textView_alarm_medicine_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:contentDescription="@string/alarm_clock_image"
        android:src="@drawable/clock" />

    <TextView
        android:id="@+id/textView_alarm_medicine_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_alarm_medicine_time"
        android:layout_alignLeft="@+id/textView_alarm_question"
         android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/alarm_medicine_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView_alarm_medicine_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_alarm_question"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/alarm_medicine_time"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView_alarm_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_alarm_ontime"
        android:layout_alignLeft="@+id/button_alarm_delayed"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/medicine_take_question"
        android:textAlignment="center"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_alarm_ontime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_alarm_delayed"
        android:layout_alignLeft="@+id/button_alarm_delayed"
        android:text="@string/alarm_ontime" />

    <Button
        android:id="@+id/button_alarm_delayed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_alarm_no"
        android:layout_alignLeft="@+id/button_alarm_no"
        android:text="@string/alarm_delayed" />

    <Button
        android:id="@+id/button_alarm_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/alarm_no" />

</RelativeLayout>