<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView_main_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="60dp"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_main_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_main_hello"
        android:layout_alignBottom="@+id/textView_main_hello"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/textView_main_hello"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_main_yourpointis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_main_hello"
        android:layout_below="@+id/textView_main_hello"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/yourpointis"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_main_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_main_yourpointis"
        android:layout_alignBottom="@+id/textView_main_yourpointis"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/textView_main_yourpointis"
        android:text="@string/points"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_main_youaretaking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_main_yourpointis"
        android:layout_below="@+id/textView_main_yourpointis"
        android:layout_marginTop="15dp"
        android:text="@string/youaretaking"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_main_medicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_main_name"
        android:layout_below="@+id/textView_main_youaretaking"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:text="@string/medicine"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Blue"
        android:textColorLink="@color/Blue" />

</RelativeLayout>